--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
   },
   "devDependencies": {
+    "@smui-extra/accordion": "^7.0.0-beta.15",
+    "@smui/button": "^7.0.0-beta.15",
+    "@smui/icon-button": "^7.0.0-beta.15",
+    "@smui/snackbar": "^7.0.0-beta.15",
     "@sveltejs/adapter-auto": "^2.0.0",
     "@sveltejs/adapter-static": "^2.0.3",
     "@sveltejs/kit": "^1.20.4",
+    "smui-theme": "^7.0.0-beta.15",
     "svelte": "^4.0.5",
     "svelte-check": "^3.4.3",
     "tslib": "^2.4.1",
