--- a/package.json
+++ b/package.json
@@ -17,15 +17,18 @@
     "@sveltejs/adapter-auto": "^2.0.0",
     "@sveltejs/adapter-static": "^2.0.3",
     "@sveltejs/kit": "^1.20.4",
+    "@types/svelte-leafletjs": "^0.8.5",
     "smui-theme": "^7.0.0-beta.15",
     "svelte": "^4.0.5",
     "svelte-check": "^3.4.3",
+    "svelte-leafletjs": "^0.10.0",
     "tslib": "^2.4.1",
     "typescript": "^5.0.0",
     "vite": "^4.4.2"
   },
   "type": "module",
   "dependencies": {
+    "leaflet": "^1.9.4",
     "zod": "^3.22.4"
   }
 }
