--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@smui/icon-button": "^7.0.0-beta.15",
     "@smui/layout-grid": "^7.0.0-beta.15",
     "@smui/list": "^7.0.0-beta.15",
+    "@smui/menu": "^7.0.0-beta.15",
     "@smui/select": "^7.0.0-beta.15",
     "@smui/snackbar": "^7.0.0-beta.15",
     "@smui/top-app-bar": "^7.0.0-beta.15",
