--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "devDependencies": {
     "@smui-extra/accordion": "^7.0.0-beta.15",
     "@smui/button": "^7.0.0-beta.15",
+    "@smui/data-table": "^7.0.0-beta.16",
     "@smui/drawer": "^7.0.0-beta.15",
     "@smui/icon-button": "^7.0.0-beta.15",
     "@smui/layout-grid": "^7.0.0-beta.15",
+    "@smui/linear-progress": "^7.0.0-beta.16",
     "@smui/list": "^7.0.0-beta.15",
     "@smui/menu": "^7.0.0-beta.15",
     "@smui/select": "^7.0.0-beta.15",
