--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@smui/menu": "^7.0.0-beta.15",
     "@smui/select": "^7.0.0-beta.15",
     "@smui/snackbar": "^7.0.0-beta.15",
+    "@smui/textfield": "^7.0.0-beta.16",
     "@smui/top-app-bar": "^7.0.0-beta.15",
     "@sveltejs/adapter-auto": "^2.0.0",
     "@sveltejs/adapter-static": "^2.0.3",
